--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -2,29 +2,30 @@ body {
     background-color: black;
 }
 
+
 .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr) 0.5fr;
-    grid-template-rows: 1.5fr repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    }
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-rows: 0.3fr 1fr 0.2fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      "header header header"
+      "main main main"
+      "footer footer footer"; 
+  }
+
     
     .header { 
-        grid-area: 1 / 1 / 2 / 6; 
+        grid-area: header; 
         background-color: aqua;
     }
     .main { 
-        grid-area: 2 / 1 / 6 / 3; 
+        grid-area: main; 
         background-color: coral;   
     }
-    .sidebar { 
-        grid-area: 2 / 3 / 7 / 4;
-        background-color: cornflowerblue;
-        height: 100vh;
-     }
+    
     .footer { 
-        grid-area: 6 / 1 / 7 / 3; 
+        grid-area: footer; 
         background-color:forestgreen;
     }
 
