--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,36 @@
+
 .menybar{
     width: 100%;
+    min-height: 170px;
+    max-height: 170px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
-    background-color: black;
+    background-color: #404040;
     text-align: center;
+    margin-bottom: 33px;
 }
 
 #nav{
+    display: flex;
     flex-flow: row nowrap;
-    height: 45px;
+    
 }
 
-#h1{
-    color: aliceblue;
+
+.spaces{
+    width: 20%; 
+    position: relative;
+
 }
+
+
+img{
+    max-width: 50px;
+    margin: 0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+
+}
+
